# microbe

./: .gitignore  README.md  pyproject.toml
examples/web_researcher/: microbe.db  worker.py
examples/web_researcher/agents/: planner.yaml  searcher.yaml  synthesizer.yaml
examples/web_researcher/workflows/: research.yaml
microbe/: __init__.py  agent.py  cli.py  db.py  llm.py  models.py  orchestrator.py  queue.py  runner.py  workflow.py
microbe/dashboard/: __init__.py  app.py
microbe/dashboard/static/: style.css
microbe/dashboard/templates/: base.html  index.html  run.html  task_detail.html  workflows.html
microbe/dashboard/templates/partials/: dag.html  task_list.html
microbe/templates/: agent.yaml.j2
microbe/templates/project/: docker-compose.yml.j2  env_example.j2  requirements.txt.j2  worker.py.j2
microbe/templates/project/workflows/: example.yaml
